Thu Dec 05 09:56:25 1996  Scott Christley  <scottc@net-community.com>

	* Headers/gnustep/gui/NSMenu.h: Newer release of OpenStep
	specification indicates NSMenu subclasses from NSObject.
	* Headers/gnustep/gui/NSFontManager.h (-enumerateFontsAndFamilies):
	New method that backend must implement.
	(-enumerateFamilies): Delete old method.
	* Source/NSColor.m: Reverse usage of global variables for common
	colors as it causes havoc with archiving.
	* Source/NSFont.m: Encode additional instance variables.
	* Source/NSFontManager.m: Rename global variables.
	(-enumerateFamilies): Replaced by -enumerateFontsAndFamilies.
	* Source/NSMenu.m: Encode additional instance variables.
	* Source/NSWindow.m: Likewise.

Fri Oct 18 12:56:14 1996  GNUstep Development  <gnustep@duncan.ocbi.com>

	* SUPPORT: New file.
	* Makefile.in: Corrected FSF address and moved comment about
	NET-Community support into SUPPORT file.
	* aclocal.m4: Likewise.
	* configure.in: Likewise.
	* config.guess: Likewise.
	* Headers/gnustep/dps/*.h: Likewise.
	* Headers/gnustep/gui/*.h: Likewise.
	* Headers/gnustep/gui/config.h.in: Likewise.
	* Source/*.m: Likewise.
	* Source/Makefile.in: Likewise.
	* Testing/Makefile.in: Likewise.
	* configure: Regenerate with autoconf for configure.in changes.

	* Testing/nsarchiver.dat: Remove file.
	* Testing/nsarchiver.m: Remove file.

	* Source/NSImageRep.m: Additional NSImage work.
	* Source/NSImage.m: Likewise.
	* Source/tiff.m: Likewise.
	
Thu Oct 17 18:11:39 1996  GNUstep Development  <gnustep@duncan.ocbi.com>

	* Headers/gnustep/resource/gui/README: New file.
	* Headers/gnustep/resource/gui/common_ArrowDown.tiff: New file.
	* Headers/gnustep/resource/gui/common_ArrowLeft.tiff: New file.
	* Headers/gnustep/resource/gui/common_ArrowRight.tiff: New file.
	* Headers/gnustep/resource/gui/common_ArrowUp.tiff: New file.
	* Headers/gnustep/resource/gui/common_Dimple.tiff: New file.
	* Headers/gnustep/resource/gui/common_RadioOff.tiff: New file.